# super-dev

./: CHANGELOG.md  README.md  README_EN.md  pyproject.toml
.claude/: README.md
.github/workflows/: publish.yml
.super-dev/: README.md  project.md
.super-dev/changes/用户登录功能-包括邮箱注册-密码登录/: change.yaml  proposal.md  tasks.md
.super-dev/changes/用户登录功能-包括邮箱注册-密码登录/specs/user/: spec.md
docs/: GITHUB_ISSUES.md  INSTALL_OPTIONS.md  PUBLISHING.md  QUICKSTART.md  WORKFLOW_GUIDE.md
scripts/: README.md  publish.sh
super_dev/: cli.py
super_dev/creators/: document_generator.py
super_dev/reviewers/: quality_gate.py
tests/: benchmark.py  conftest.py
tests/integration/: test_cli.py
tests/unit/: test_analyzer.py  test_config.py  test_workflow.py
